feature: Validaciones añadidas al las predicciones y la muestra de puntos
Se actualizaron los datos mostrados por las predicciones.
- Se añadio un bloque para ser mostrada en primer medida al usuario, para no incitarlo a predecir algo de primeras bloqueado.
- Se muestran los goles de predicciones con partidos, activos, finalizados o con 30 minutos de antelación a inicio.