@@ -1,19 +1,28 @@
 package com.prode.infrastructure.adapter.inbound.web;
 
-import com.prode.application.dto.request.PredictionRequest;
-import com.prode.application.dto.response.MatchResponse;
-import com.prode.application.service.MatchService;
-import com.prode.application.service.PredictionService;
-import com.prode.application.service.RoundService;
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.ModelAttribute;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
-import java.util.List;
+
+import com.prode.application.dto.request.PredictionRequest;
+import com.prode.application.dto.response.MatchResponse;
+import com.prode.application.service.MatchService;
+import com.prode.application.service.PredictionService;
+import com.prode.application.service.RoundService;
 
 @Controller
 @RequestMapping("/user")
@@ -24,12 +33,14 @@ public class UserPredictionWebController {
     private final RoundService roundService;
 
     public UserPredictionWebController(PredictionService predictionService,
-                                        MatchService matchService,
-                                        RoundService roundService) {
+            MatchService matchService,
+            RoundService roundService) {
         this.predictionService = predictionService;
         this.matchService = matchService;
         this.roundService = roundService;
     }
+
+    // ... otros imports ...
 
     @GetMapping("/pronosticos")
     public String listPredictions(
@@ -40,24 +51,36 @@ public class UserPredictionWebController {
             @PageableDefault(size = 10) Pageable pageable,
             Model model) {
 
-        Long usuarioId = soloMios ? predictionService.findUserIdByEmail(authentication.getName()) : null;
+        String currentEmail = authentication.getName();
 
-        Page<com.prode.application.dto.response.PredictionResponse> predictionsPage =
-                predictionService.findAllFiltered(matchId, jornada, usuarioId, pageable);
+        boolean isAdmin = authentication.getAuthorities().stream()
+                .anyMatch(a -> a.getAuthority().equals("ROLE_ADMIN"));
 
-        // Upcoming matches (for carousel)
-        List<MatchResponse> upcomingMatches = matchService.findAll(null).stream()
-                .filter(m -> "POR_JUGARSE".equals(m.getEstado()))
-                .toList();
+        Long usuarioId = soloMios ? predictionService.findUserIdByEmail(currentEmail) : null;
+
+        Page<com.prode.application.dto.response.PredictionResponse> predictionsPage = predictionService
+                .findAllFilteredSecure(matchId, jornada, usuarioId, currentEmail, isAdmin, pageable);
+
+        // filtro de matches, debn estar en POR_JUGARSE o a más de 30 minutos de iniciar
+        List<MatchResponse> upcomingMatches = matchService.findAll((Long) null).stream()
+                .filter(m -> "POR_JUGARSE".equals(m.getEstado()) &&
+                        m.getFecha().minusMinutes(30).isAfter(LocalDateTime.now()))
+                .collect(Collectors.toList());
+        Long currentUserId = predictionService.findUserIdByEmail(currentEmail);
 
         model.addAttribute("predictionsPage", predictionsPage);
         model.addAttribute("upcomingMatches", upcomingMatches);
-        model.addAttribute("matches", matchService.findAll(null));
-        model.addAttribute("rounds", roundService.findAll(null));
+
+        // CORRECCIÓN AQUÍ: Casteamos a (Long) y (String) para evitar ambigüedades
+        model.addAttribute("matches", matchService.findAll((Long) null));
+        model.addAttribute("rounds", roundService.findAll((String) null));
+
         model.addAttribute("selectedMatchId", matchId);
         model.addAttribute("selectedJornada", jornada);
         model.addAttribute("soloMios", soloMios);
         model.addAttribute("pageTitle", "Pronosticos");
+
+        model.addAttribute("currentUserId", currentUserId);
         return "user/predictions/list";
     }
 
@@ -78,8 +101,8 @@ public class UserPredictionWebController {
 
     @PostMapping("/pronosticos")
     public String createPrediction(@ModelAttribute PredictionRequest request,
-                                    Authentication authentication,
-                                    RedirectAttributes redirect) {
+            Authentication authentication,
+            RedirectAttributes redirect) {
         try {
             predictionService.create(request, authentication.getName());
             redirect.addFlashAttribute("success", "Pronostico guardado exitosamente");
@@ -90,9 +113,24 @@ public class UserPredictionWebController {
     }
 
     @GetMapping("/pronosticos/{id}/editar")
-    public String editPredictionForm(@PathVariable Long id, Model model) {
+    public String editPredictionForm(@PathVariable Long id, Authentication authentication, Model model,
+            RedirectAttributes redirect) {
         try {
             var prediction = predictionService.findById(id);
+
+            // Obtenemos el ID del usuario logueado
+            Long currentUserId = predictionService.findUserIdByEmail(authentication.getName());
+
+            // Si la predicción no pertenece al usuario actual, redirigimos con un error
+            if (!prediction.getUserId().equals(currentUserId)) {
+                return "redirect:/user/pronosticos";
+            }
+
+            if (prediction.getFechaPartido().minusMinutes(30).isBefore(LocalDateTime.now())) {
+                redirect.addFlashAttribute("error", "Ya no puedes editar este pronóstico.");
+                return "redirect:/user/pronosticos";
+            }
+
             PredictionRequest request = new PredictionRequest();
             request.setMatchId(prediction.getMatchId());
             request.setPuntosLocal(prediction.getPuntosLocal());
@@ -110,9 +148,9 @@ public class UserPredictionWebController {
 
     @PostMapping("/pronosticos/{id}/actualizar")
     public String updatePrediction(@PathVariable Long id,
-                                    @ModelAttribute PredictionRequest request,
-                                    Authentication authentication,
-                                    RedirectAttributes redirect) {
+            @ModelAttribute PredictionRequest request,
+            Authentication authentication,
+            RedirectAttributes redirect) {
         try {
             predictionService.update(id, request, authentication.getName());
             redirect.addFlashAttribute("success", "Pronostico actualizado exitosamente");
@@ -124,8 +162,8 @@ public class UserPredictionWebController {
 
     @PostMapping("/pronosticos/{id}/cancelar")
     public String deletePrediction(@PathVariable Long id,
-                                    Authentication authentication,
-                                    RedirectAttributes redirect) {
+            Authentication authentication,
+            RedirectAttributes redirect) {
         try {
             predictionService.delete(id, authentication.getName());
             redirect.addFlashAttribute("success", "Pronostico cancelado exitosamente");
